# dpss

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dpss.desktop
client/: CMakeLists.txt  ConfigDialog.h  DDEProxyModeManager.cpp  DDEProxyModeManager.h  GConfig.cc  GConfig.h  GuiConfig.cpp  GuiConfig.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ProxyManager.cpp  ProxyManager.h  QRCaptor.cpp  QRCaptor.h  QRCodeCapturer.cpp  Settings.cpp  UrlHelper.cpp  UrlHelper.h  constant.h  i18n.qrc  icons.qrc  main.cpp  scontroller.cc  scontroller.h  stdafx.h  utils.cpp
client/config/: Configuration.cc  Configuration.h  JConfig.h  Proxy.cc  Proxy.h  Server.cc  Server.h
client/dialog/: ConfigDialog.cpp  ConfigDialog.h  ConfigDialog.ui  ProxyDialog.cpp  ProxyDialog.h  ProxyDialog.ui  ShareDialog.cpp  ShareDialog.h
client/i18n/: dpss_zh.ts
client/interface/: SystemProxyModeManager.h
src/: CMakeLists.txt  ConfigDialog.h  ConfigDialog.ui  GuiConfig.cpp  GuiConfig.h  MainWindow.cpp  MainWindow.h  ProxyDialog.cpp  ProxyDialog.h  ProxyDialog.ui  ProxyManager.cpp  ProxyManager.h  SSValidator.cpp  src.pro  stdafx.h
src/3rd_part/include/QtShadowsocks/: address.h  controller.h  profile.h  tcpserver.h  udprelay.h
src/translations/: shadowsocks-client_zh.qm
